<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/mCopyMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_copy"
        android:title="@string/copyText"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/mSaveImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_download"
        android:title="@string/save_image"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/mDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/delete_yourself"
        android:icon="@drawable/ic_delete"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/mDeleteAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/take_back_message"
        android:icon="@drawable/ic_delete"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/mCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/cancel_action"
        android:icon="@drawable/ic_close"
        app:showAsAction="always"/>
</menu>