<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_menu_vertical"
        app:showAsAction="always"
        android:title="@string/account_setting" >
        <menu
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <item
                android:id="@+id/cp_go_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_search_user"
                app:showAsAction="ifRoom"
                android:title="@string/go_to_profile" />
            <item
                android:id="@+id/cp_clear_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_delete"
                app:showAsAction="ifRoom"
                android:title="@string/clear_messages" />
        </menu>
    </item>
</menu>